Fix: Overlay on Safari

--- a/Resources/Private/Assets/_Base.scss
+++ b/Resources/Private/Assets/_Base.scss
@@ -24,6 +24,7 @@
     outline: none;
     margin: 0;
     padding: 0;
+    isolation: isolate;
   }
 
   & > :where(button) {
